// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading indicator snapshot test 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(236, 230, 240, 1)",
      "borderRadius": 28,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="search-bar-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(236, 230, 240, 1)",
        "borderRadius": 28,
        "flex": undefined,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="search-bar-container"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "height": 40,
          "margin": 6,
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "width": 40,
        }
      }
      testID="search-bar-icon-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderColor": "rgba(202, 196, 208, 1)",
            "borderRadius": 20,
            "borderWidth": 0,
            "elevation": 0,
            "flex": 1,
            "overflow": "hidden",
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="search-bar-icon-container"
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel="search"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityTraits="button"
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          centered={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
                undefined,
              ],
            ]
          }
          testID="search-bar-icon"
        >
          <View
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(73, 69, 79, 1)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                ]
              }
            >
              magnify
            </Text>
          </View>
        </View>
      </View>
    </View>
    <TextInput
      accessibilityRole="search"
      keyboardAppearance="light"
      placeholder=""
      placeholderTextColor="rgba(29, 27, 32, 1)"
      returnKeyType="search"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "alignSelf": "stretch",
            "flex": 1,
            "fontSize": 18,
            "minWidth": 0,
            "paddingLeft": 8,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.5,
            "lineHeight": 0,
            "textAlign": "left",
          },
          {
            "minHeight": 56,
            "paddingLeft": 0,
          },
          undefined,
        ]
      }
      testID="search-bar"
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessibilityRole="progressbar"
      accessibilityState={
        {
          "busy": true,
        }
      }
      accessibilityValue={{}}
      accessible={true}
      style={
        [
          {
            "height": 40,
            "width": 40,
          },
          {
            "marginHorizontal": 16,
          },
        ]
      }
      testID="loading-indicator"
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          ]
        }
      >
        <View
          height={40}
          width={40}
        >
          <View
            animatedProps={
              {
                "strokeDashoffset": 101.7876019763093,
              }
            }
            cx={20}
            cy={20}
            fill="none"
            r={18}
            stroke="rgba(103, 80, 164, 1)"
            strokeDasharray={
              [
                113.09733552923255,
                113.09733552923255,
              ]
            }
            strokeLinecap="round"
            strokeWidth={4}
            testID="loading-indicator-active"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders with placeholder 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(236, 230, 240, 1)",
      "borderRadius": 28,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="search-bar-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(236, 230, 240, 1)",
        "borderRadius": 28,
        "flex": undefined,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="search-bar-container"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "height": 40,
          "margin": 6,
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "width": 40,
        }
      }
      testID="search-bar-icon-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderColor": "rgba(202, 196, 208, 1)",
            "borderRadius": 20,
            "borderWidth": 0,
            "elevation": 0,
            "flex": 1,
            "overflow": "hidden",
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="search-bar-icon-container"
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel="search"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityTraits="button"
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          centered={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
                undefined,
              ],
            ]
          }
          testID="search-bar-icon"
        >
          <View
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(73, 69, 79, 1)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                ]
              }
            >
              magnify
            </Text>
          </View>
        </View>
      </View>
    </View>
    <TextInput
      accessibilityRole="search"
      keyboardAppearance="light"
      placeholder="Search"
      placeholderTextColor="rgba(29, 27, 32, 1)"
      returnKeyType="search"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "alignSelf": "stretch",
            "flex": 1,
            "fontSize": 18,
            "minWidth": 0,
            "paddingLeft": 8,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.5,
            "lineHeight": 0,
            "textAlign": "left",
          },
          {
            "minHeight": 56,
            "paddingLeft": 0,
          },
          undefined,
        ]
      }
      testID="search-bar"
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      pointerEvents="none"
      style={
        [
          {
            "marginLeft": 16,
            "position": "absolute",
            "right": 0,
          },
          false,
        ]
      }
      testID="search-bar-icon-wrapper"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderRadius": 20,
            "height": 40,
            "margin": 6,
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "width": 40,
          }
        }
        testID="search-bar-clear-icon-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "rgba(202, 196, 208, 1)",
              "borderRadius": 20,
              "borderWidth": 0,
              "elevation": 0,
              "flex": 1,
              "overflow": "hidden",
              "shadowColor": "rgba(0, 0, 0, 1)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="search-bar-clear-icon-container"
        >
          <View
            accessibilityComponentType="button"
            accessibilityLabel="clear"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityTraits="button"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            centered={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                [
                  {
                    "alignItems": "center",
                    "flexGrow": 1,
                    "justifyContent": "center",
                  },
                  undefined,
                ],
              ]
            }
            testID="search-bar-clear-icon"
          >
            <View
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                selectable={false}
                style={
                  [
                    {
                      "color": "rgba(255, 255, 255, 0)",
                      "fontSize": 24,
                    },
                    [
                      {
                        "lineHeight": 24,
                        "transform": [
                          {
                            "scaleX": 1,
                          },
                        ],
                      },
                      {
                        "backgroundColor": "transparent",
                      },
                    ],
                  ]
                }
              >
                close
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders with text 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(236, 230, 240, 1)",
      "borderRadius": 28,
      "shadowColor": "rgba(0, 0, 0, 1)",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="search-bar-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(236, 230, 240, 1)",
        "borderRadius": 28,
        "flex": undefined,
        "flexDirection": "row",
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="search-bar-container"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "height": 40,
          "margin": 6,
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "width": 40,
        }
      }
      testID="search-bar-icon-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderColor": "rgba(202, 196, 208, 1)",
            "borderRadius": 20,
            "borderWidth": 0,
            "elevation": 0,
            "flex": 1,
            "overflow": "hidden",
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="search-bar-icon-container"
      >
        <View
          accessibilityComponentType="button"
          accessibilityLabel="search"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityTraits="button"
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          centered={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
                undefined,
              ],
            ]
          }
          testID="search-bar-icon"
        >
          <View
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(73, 69, 79, 1)",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                      "transform": [
                        {
                          "scaleX": 1,
                        },
                      ],
                    },
                    {
                      "backgroundColor": "transparent",
                    },
                  ],
                ]
              }
            >
              magnify
            </Text>
          </View>
        </View>
      </View>
    </View>
    <TextInput
      accessibilityRole="search"
      keyboardAppearance="light"
      placeholder="Search"
      placeholderTextColor="rgba(29, 27, 32, 1)"
      returnKeyType="search"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "alignSelf": "stretch",
            "flex": 1,
            "fontSize": 18,
            "minWidth": 0,
            "paddingLeft": 8,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.5,
            "lineHeight": 0,
            "textAlign": "left",
          },
          {
            "minHeight": 56,
            "paddingLeft": 0,
          },
          undefined,
        ]
      }
      testID="search-bar"
      underlineColorAndroid="transparent"
      value="query"
    />
    <View
      pointerEvents="auto"
      style={
        [
          false,
          false,
        ]
      }
      testID="search-bar-icon-wrapper"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderRadius": 20,
            "height": 40,
            "margin": 6,
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "width": 40,
          }
        }
        testID="search-bar-clear-icon-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "rgba(202, 196, 208, 1)",
              "borderRadius": 20,
              "borderWidth": 0,
              "elevation": 0,
              "flex": 1,
              "overflow": "hidden",
              "shadowColor": "rgba(0, 0, 0, 1)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="search-bar-clear-icon-container"
        >
          <View
            accessibilityComponentType="button"
            accessibilityLabel="clear"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityTraits="button"
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            centered={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                [
                  {
                    "alignItems": "center",
                    "flexGrow": 1,
                    "justifyContent": "center",
                  },
                  undefined,
                ],
              ]
            }
            testID="search-bar-clear-icon"
          >
            <View
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityElementsHidden={true}
                importantForAccessibility="no-hide-descendants"
                pointerEvents="none"
                selectable={false}
                style={
                  [
                    {
                      "color": "rgba(73, 69, 79, 1)",
                      "fontSize": 24,
                    },
                    [
                      {
                        "lineHeight": 24,
                        "transform": [
                          {
                            "scaleX": 1,
                          },
                        ],
                      },
                      {
                        "backgroundColor": "transparent",
                      },
                    ],
                  ]
                }
              >
                close
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
